--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,33 @@
   }
 }
 
+@keyframes slide-down {
+  from {
+    margin-top: -80px
+  }
+  to {
+    margin-top: -50px;
+  }
+}
+
+@keyframes change-bg {
+  0% {
+    background: #ee6055;
+  }
+  25% {
+    background: #60d394;
+  }
+  50% {
+    background: #aaf683;
+  }
+  75% {
+    background: #ffd97d;
+  }
+  100% {
+    background: #ff9b85;
+  }
+}
+
 
 /* Body */
 body {
@@ -31,7 +58,7 @@ body {
   position: relative;
   cursor: pointer;
   color: black;
-  animation: fade-in 3s ease;
+  animation: fade-in 3s ease, slide-right 3s ease;
 }
 
 button.david {
@@ -45,7 +72,9 @@ button.david {
 .links {
 float: right;
 margin-top: -50px;
-animation: fade-in 3s ease;
+animation: fade-in 3s ease, slide-down 3s ease;
+font-family: "Raleway", sans-serif;
+justify-content: space-between;
 }
 
 a:visited {
@@ -55,19 +84,19 @@ a:visited {
 
 
 #portfolio {
-  font-size: 35px;
-  margin-right: 20px;
+  font-size: 180%;
+  margin-right: 50px;
   text-decoration: none;
 }
 
 #resume {
-  font-size: 35px;
-  margin-right: 20px;
+  font-size: 180%;
+  margin-right: 50px;
 }
 
 #project {
-  font-size: 35px;
-  margin-right: 30px;
+  font-size: 180%;
+  margin-right: 60px;
 }
 
 /* About */
@@ -75,42 +104,30 @@ a:visited {
   margin-left: 50px;
 }
 
-#profile {
-  position: absolute;
-  border: 5px solid rgb(0, 191, 255);
-  background: rgb(0, 132, 255);
-  margin-top: 300px;
-  margin-left: 100px;
-  width: 400px;
-  height: 500px;
-  box-shadow: 0 6px 10px rgb(51, 88, 162);
-  border-radius: 10px;
-}
-
 #hello {
   position: absolute; 
-  left: 4%;
-  top: 30%;
+  left: 7%;
+  top: 25%;
   color: white;
   font-family: 'Inter';
   font-style: normal;
   font-size: 50px;
   line-height: 97px;
-  animation: slide-right 2s ease;
+  animation: slide-right 2s ease, fade-in ease 3s;
 }
 
 #intro {
   position: absolute;
   width: 45%;
   left: 4%;
-  top: 45%;
+  top: 40%;
   color: white;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 35px;
   line-height: 48px;
-  animation: slide-right 2s ease;
+  animation: slide-right 2s ease, fade-in ease 3s;
 }
 
 #skills {
@@ -203,14 +220,55 @@ a:visited {
   transition: .3s;
 }
 
-/* Projects */
-#carousel-container {
-  border: 3px solid white;
-  margin-top: 100px;
-  height: 600px;
-  width: 1100px;
-  margin-left: 26%;
-  border-radius: 5%;
+#triangle {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 20%;
+  height: 40%;
+  animation: change-bg 5s infinite alternate linear, fade-in 3s ease;
+  border-top-left-radius: 100%;
+}
+
+#footer-design {
+
+}
+
+/* Portfolio */
+
+
+.card {
+  position: absolute;
+  border: 5px solid rgb(0, 191, 255);
+  background-color: white;
+  margin-top: 10%;
+  margin-left:10%;
+  width: 25%;
+  height: 40%;
+  box-shadow: 0 6px 10px white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+
+
+#pwGen {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.card2 {
+  position: absolute;
+  border: 5px solid rgb(0, 191, 255);
+  background-color: white;
+  margin-top: 45%;
+  margin-left:10%;
+  width: 25%;
+  height: 40%;
+  box-shadow: 0 6px 10px white;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 #right-arrow {
@@ -227,6 +285,7 @@ cursor: pointer;
   margin-top: 10%;
   margin-left: -9%;
   cursor: pointer;
+
 }
 
 /* Resume */
@@ -234,6 +293,7 @@ cursor: pointer;
   margin-top: 100px;
   color: white;
   font-size: 22px;
+  animation: fade-in ease 2s;
 }
 
 #header {
