--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,12 @@ a:visited {
   animation: slide-right 2s ease, fade-in ease 3s;
 }
 
+@media screen and (max-width: 1370px) {
+  #intro {
+    width: 60%
+  }
+}
+
 #skills {
   margin-top: -200px;
   margin-left: 1050px;
@@ -220,6 +226,7 @@ a:visited {
   transition: .3s;
 }
 
+
 #triangle {
   position: fixed;
   right: 0;
@@ -230,63 +237,111 @@ a:visited {
   border-top-left-radius: 100%;
 }
 
-#footer-design {
+#certificate {
+  position: relative;
+  width: 650px;
+  margin-left: 55%;
+  margin-top: 10%;
+  animation: fade-in 3s ease;
+}
 
+@media screen and (max-width: 1600px) {
+  #certificate {
+    margin-left: 10px;
+    margin-top: 1000px;
+  }
 }
 
 /* Portfolio */
 
+#portfolio-container {
+  margin-left: 5%;
+}
 
-.card {
-  position: absolute;
-  border: 5px solid rgb(0, 191, 255);
+/* .card {
+  position: relative;
+  border: 5px solid white;
   background-color: white;
   margin-top: 10%;
   margin-left:10%;
-  width: 25%;
-  height: 40%;
+  max-width: 400px;
+  height: 350px;
   box-shadow: 0 6px 10px white;
   border-radius: 10px;
   overflow: hidden;
+} */
+
+#pwGen-text {
+  position: absolute;
 }
-
-
 
 #pwGen {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+  width: 30%;
+  height: 30vh;
+  border-radius: 20px;
+  position: absolute;
+  margin-top: 15%;
+  cursor: pointer;
+  animation: fade-in 3s ease;
 }
 
-.card2 {
-  position: absolute;
-  border: 5px solid rgb(0, 191, 255);
-  background-color: white;
-  margin-top: 45%;
+/* .card2 {
+  position: relative;
+  border: 5px solid white;
+  background-color: rgb(255, 255, 255);
+  margin-top: 10%;
   margin-left:10%;
-  width: 25%;
-  height: 40%;
+  max-width: 400px;
+  height: 350px;
   box-shadow: 0 6px 10px white;
   border-radius: 10px;
   overflow: hidden;
-}
+} */
 
-#right-arrow {
-position: absolute;
-font-size: 100px;
-margin-top: 10%;
-margin-left: 55%;
-cursor: pointer;
-}
-
-#left-arrow {
+#notes {
+  width: 30%;
+  height: 30vh;
+  border-radius: 20px;
   position: absolute;
-  font-size: 100px;
-  margin-top: 10%;
-  margin-left: -9%;
+  margin-top: 40%;
   cursor: pointer;
-
+  animation: fade-in ease 3s
 }
+
+/* .card3 {
+  position: relative;
+  border: 5px solid white;
+  background-color: white;
+  margin-top: 10%;
+  margin-left:10%;
+  max-width: 400px;
+  height: 350px;
+  box-shadow: 0 6px 10px white;
+  border-radius: 10px;
+  overflow: hidden;
+} */
+
+
+#quiz {
+  position: absolute;
+  width: 30%;
+  height: 30vh;
+  border-radius: 20px;
+  margin-top: 65%;
+  cursor: pointer;
+  animation: fade-in ease 3s;
+}
+
+#weather {
+  position: absolute;
+  width: 30%;
+  height: 30vh;
+  border-radius: 20px;
+  margin-top: 90%;
+  cursor: pointer;
+  animation: fade-in ease 3s;
+}
+
 
 /* Resume */
 #container {
